<resources>
    <string name="app_name">EAF Toolkit</string>

    <string name="hello">Greetings</string>
    <string name="title_activity_julian">Julian</string>
    <string name="title_activity_slope">Slope</string>

    <string name="title_activity_mat_calc">MatCalc</string>

    <string name="title_activity_flols">FLOLS Hook 2 Eye</string>
    <string name="title_activity_splash_screen">EAF Toolkit</string>
    <string name="brc_name">Bogue Rat Creations</string>
    <string name="about_text">Tools for the EAF Community.</string>
    <string name="title_activity_about">About</string>

    <!-- Strings for imgGallery -->

    <string name="about_extra">Always looking for ways to improve the Toolkit, let me know what you would like to see.</string>
    <string name="about_extra2">Submit your own photos depicting EAF Equipment and Sites.  And let me know what we should be working on at support@boguerat.com</string>
    <string name="about_extra3">This app is not endorsed by any governmental agency.  Always follow local policies and instructions.</string>
    <string name="title_activity_inspect">Inspections</string>
    <string name="title_activity_programs">Programs</string>
    <string name="title_activity_questions">Questions</string>
    <string name="title_activity_question_detail">Question Detail</string>
    <string name="title_activity_gallery_thumbs">EAF Images</string>
    <string name="title_activity_gallery_detail">EAF Image Detail</string>

    <!-- Strings for Draw -->
    <string name="start_new">New</string>
    <string name="gallery">Gallery</string>
    <string name="brush">Brush</string>
    <string name="opacity">Opacity</string>
    <string name="color">Colors</string>
    <string name="save">Save</string>
    <string name="paint">Paint</string>
    <string name="sml">Small</string>
    <string name="med">Medium</string>
    <string name="lrg">Large</string>
    <string name="opacity_desc">Visual Depiction of Opacity Level</string>
    <string name="H2E">16.7</string>
    <string name="title_activity_mat_span">Matting Spans</string>
    <string name="title_activity_mat_span_new">New Span</string>
    <string name="title_activity_mat_span_edit">Edit Span</string>
    <string name="title_activity_mat_span_summary">Summary of Selected Spans</string>
    <string name="title_activity_dcp_main">DcpMain</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_projects">Projects</string>
    <string name="title_activity_projects_add">Add/Edit Project</string>
    <string name="title_activity_points">Points</string>
    <string name="title_activity_readings">Readings</string>
    <string name="title_activity_points_add">PointsAdd</string>
    <string name="select_create_project">Select / Create Project</string>
    <string name="title_activity_points_chart">Project CBRs Graph</string>
    <string name="title_activity_points_plot">PointsPlot</string>
    <string name="title_activity_projects_map">Project Location</string>
    <string name="title_activity_projects_mapper">Set Project Location</string>


    <!--    Permissions  (from google maps api demo code)  -->
    <string name="permission_rationale_location">Access to the location service is required to use the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This feature requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'EAF Toolkit\'.</string>
    <string name="permission_required_toast">Location permission is required for this feature.</string>

</resources>
