<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFCCCCCC"
    android:orientation="vertical"
    android:id="@+id/draw_activity"
    tools:context=".Draw.DrawingView" >

    <com.bogueratcreations.eaftoolkit.Draw.DrawingView
        android:id="@+id/drawing"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#FFFFFFFF" />
    <!--android:layout_marginBottom="3dp"-->
    <!--android:layout_marginLeft="5dp"-->
    <!--android:layout_marginRight="5dp"-->
    <!--android:layout_marginTop="3dp"-->

    <!-- Bottom menu -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:id="@+id/draw_menu">
        <ImageButton
            android:id="@+id/color_btn"
            android:layout_width="50dp"
            android:layout_height="fill_parent"
            android:contentDescription="@string/color"
            android:src="@drawable/icon_color_wheel" />
        <ImageButton
            android:id="@+id/draw_btn"
            android:layout_width="50dp"
            android:layout_height="fill_parent"
            android:contentDescription="@string/brush"
            android:src="@drawable/icon_brush" />
        <ImageButton
            android:id="@+id/opacity_btn"
            android:layout_width="50dp"
            android:layout_height="fill_parent"
            android:contentDescription="@string/opacity"
            android:src="@drawable/icon_opacity" />
        <ImageButton
            android:id="@+id/new_btn"
            android:layout_width="50dp"
            android:layout_height="fill_parent"
            android:contentDescription="@string/start_new"
            android:src="@drawable/icon_eraser" />
        <ImageButton
            android:id="@+id/gallery_btn"
            android:layout_width="50dp"
            android:layout_height="fill_parent"
            android:contentDescription="@string/gallery"
            android:onClick="loadImageFromGallery"
            android:src="@drawable/icon_gallery" />
        <ImageButton
            android:id="@+id/save_btn"
            android:layout_width="50dp"
            android:layout_height="fill_parent"
            android:contentDescription="@string/save"
            android:src="@drawable/icon_save" />

    </LinearLayout>

</LinearLayout>
